--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import "base/variables";
+
 * {
   font-family: "Museo Sans Cyrl", sans-serif;
 }
@@ -13,3 +14,6 @@
 @import "blocks/titles";
 @import "blocks/consultations";
 @import "blocks/forms";
+@import "blocks/carousel";
+@import "blocks/catalog";
+@import "blocks/feed";
