--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,7 @@
+@import "libs/bootstrap-reboot.min";
+@import "libs/font";
+@import "libs/slick";
+@import "libs/animate";
 @import "base/variables";
 
 * {
@@ -17,3 +21,9 @@
 @import "blocks/carousel";
 @import "blocks/catalog";
 @import "blocks/feed";
+@import "blocks/media";
+@import "blocks/media";
+@import "blocks/footer";
+@import "blocks/modal";
+@import "blocks/pageup";
+@import "base/animations";
